snakemake_GAN/scripts/slurm-10842346.out
Unpacking venv 'venv_train_degad'
Updating paths
beginning training
Building DAG of jobs...
Using shell: /cvmfs/soft.computecanada.ca/gentoo/2020/bin/bash
Provided cores: 1 (use --cores to define parallelism)
Rules claiming more threads will be scaled down.
Job stats:
job             count
------------  -------
all                 1
copy_patches        1
train               3
total               5

Select jobs to execute...

[Thu Sep  7 20:03:49 2023]
rule copy_patches:
    input: data/patches/training_samples_16.dat, data/patches/validation_samples_16.dat
    output: /localscratch/fogunsan.10842346.0/training_samples_16.dat, /localscratch/fogunsan.10842346.0/validation_samples_16.dat
    jobid: 2
    reason: Missing output files: /localscratch/fogunsan.10842346.0/validation_samples_16.dat, /localscratch/fogunsan.10842346.0/training_samples_16.dat
    wildcards: p_size=16
    resources: tmpdir=/tmp

[Thu Sep  7 20:05:55 2023]
Finished job 2.
1 of 5 steps (20%) done
Select jobs to execute...

[Thu Sep  7 20:05:55 2023]
rule train:
    input: /localscratch/fogunsan.10842346.0/training_samples_16.dat, /localscratch/fogunsan.10842346.0/validation_samples_16.dat
    output: output/patch-16_batch-128_LR-0.01_filterG-16_filterD-16_depthG-3_convsG-2_convsD-2_stepsD-4/model_log.txt
    jobid: 1
    reason: Missing output files: output/patch-16_batch-128_LR-0.01_filterG-16_filterD-16_depthG-3_convsG-2_convsD-2_stepsD-4/model_log.txt; Input files updated by another job: /localscratch/fogunsan.10842346.0/validation_samples_16.dat, /localscratch/fogunsan.10842346.0/training_samples_16.dat
    wildcards: p_size=16, b_size=128, lr=0.01, filterG=16, filterD=16, depthG=3, convsG=2, convsD=2, steps=4
    resources: tmpdir=/tmp

  File "/project/6050199/akhanf/cfmm-bids/data/Lau/degad/snakemake/snakemake_GAN/scripts/training_degad_GAN.py", line 386
    def __name__ == "__main__":
                 ^^
SyntaxError: invalid syntax
[Thu Sep  7 20:05:55 2023]
Error in rule train:
    jobid: 1
    input: /localscratch/fogunsan.10842346.0/training_samples_16.dat, /localscratch/fogunsan.10842346.0/validation_samples_16.dat
    output: output/patch-16_batch-128_LR-0.01_filterG-16_filterD-16_depthG-3_convsG-2_convsD-2_stepsD-4/model_log.txt
    shell:
        python3 scripts/training_degad_GAN.py --input /localscratch/fogunsan.10842346.0/training_samples_16.dat /localscratch/fogunsan.10842346.0/validation_samples_16.dat --patch_size 16 --batch_size 128 --lr 0.01 --ini_filter_G 16 --ini_filter_D 16 --depth_G 3 --num_conv_G 2 --num_conv_D 2 --train_steps_D 4  > output/patch-16_batch-128_LR-0.01_filterG-16_filterD-16_depthG-3_convsG-2_convsD-2_stepsD-4/model_log.txt
        (one of the commands exited with non-zero exit code; note that snakemake uses bash strict mode!)

Removing output files of failed job train since they might be corrupted:
output/patch-16_batch-128_LR-0.01_filterG-16_filterD-16_depthG-3_convsG-2_convsD-2_stepsD-4/model_log.txt
Shutting down, this might take some time.
Exiting because a job execution failed. Look above for error message
Complete log: .snakemake/log/2023-09-07T200347.126815.snakemake.log
